<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFwd"
            android:layout_width="@dimen/big_button"
            android:layout_height="@dimen/big_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/arrow_up"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_up"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="107dp" />

        <ImageButton
            android:id="@+id/btnBck"
            android:layout_width="@dimen/big_button"
            android:layout_height="@dimen/big_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/arrow_down"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_down"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="207dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="@dimen/big_button"
            android:layout_height="@dimen/big_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/arrow_left"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left"
            tools:layout_editor_absoluteX="400dp"
            tools:layout_editor_absoluteY="187dp" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="@dimen/big_button"
            android:layout_height="@dimen/big_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/arrow_right"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            tools:layout_editor_absoluteX="497dp"
            tools:layout_editor_absoluteY="187dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageButton
            android:id="@+id/btnM1Fwd"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_left"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left"
            tools:layout_editor_absoluteX="400dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motor_1" />

        <ImageButton
            android:id="@+id/btnM1Bck"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_right"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            tools:layout_editor_absoluteX="497dp"
            tools:layout_editor_absoluteY="187dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageButton
            android:id="@+id/btnM2Fwd"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_left"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left"
            tools:layout_editor_absoluteX="400dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motor_2" />

        <ImageButton
            android:id="@+id/btnM2Bck"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_right"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            tools:layout_editor_absoluteX="497dp"
            tools:layout_editor_absoluteY="187dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnM3Fwd"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_left"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left"
            tools:layout_editor_absoluteX="400dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motor_3" />

        <ImageButton
            android:id="@+id/btnM3Bck"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_right"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            tools:layout_editor_absoluteX="497dp"
            tools:layout_editor_absoluteY="187dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10">

        <ImageButton
            android:id="@+id/btnM4Fwd"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_left"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left"
            tools:layout_editor_absoluteX="400dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motor_4" />

        <ImageButton
            android:id="@+id/btnM4Bck"
            android:layout_width="@dimen/small_button"
            android:layout_height="@dimen/small_button"
            android:layout_margin="@dimen/button_margin"
            android:background="@color/colorButton"
            android:contentDescription="@string/arrow_right"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            tools:layout_editor_absoluteX="497dp"
            tools:layout_editor_absoluteY="187dp" />

    </LinearLayout>

    <cz.vabalcar.android.androidsensordatavisualizer.AndroidSensorDataVisualizer
        android:id="@+id/dataVisualizer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#fafafa"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />


</android.support.constraint.ConstraintLayout>